--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
+    "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.1.2",
     "next": "16.0.3",
     "openai": "^6.9.0",
