--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@supabase/supabase-js": "^2.81.1",
     "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.1.2",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "openai": "^6.9.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sharp": "^0.34.5",
     "zod": "^4.1.12"
   },
