--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
     "@vercel/analytics": "^1.5.0",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.3",
     "next": "^16.1.1",
+    "next-themes": "^0.4.6",
     "openai": "^6.9.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
